# ImageProcessor

./: CMakeLists.txt  README.md  image_processor.cpp
include/data/: color.h  image.h
include/filters/: crop.h  edge_detection.h  filter.h  gaussian_blur.h  glass_distortion.h  grayscale.h  matrix_filter.h  my_filter.h  negative.h  point_filter.h  sharp.h
include/io/: bmp.h  image_format.h
include/utils/: abstract_filter_factory.h  args_processor.h  exceptions.h  pipeline.h
src/data/: color.cpp  image.cpp
src/filters/: crop.cpp  edge_detection.cpp  gaussian_blur.cpp  glass_distortion.cpp  grayscale.cpp  matrix_filter.cpp  my_filter.cpp  negative.cpp  point_filter.cpp  sharp.cpp
src/io/: bmp.cpp
src/utils/: args_processor.cpp  exceptions.cpp  pipeline.cpp
